objects/SalesPlan__c.object
<CustomObject>
    <description>SFDC-5363 The object is created to store the Sales Plan details in Salesforce</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC-5363 Field to store the plan amount for the product</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessLineName__c</fullName>
        <formula>BusinessLine__r.Name</formula>
        <label>Business Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-5363 Field to store the Businessline associated with the Plan</description>
        <label>Business Line</label>
        <referenceTo>BusinessLine__c</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InternalBusinessSegment__c</fullName>
        <description>SFDC-5363 Field to store the Internal business Segment associated with the plan</description>
        <label>Internal Business Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlySalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Sales Plan</label>
        <referenceTo>SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>SFDC-5363 Field to store the plan start date</description>
        <label>Sales Plan Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductGroupName__c</fullName>
        <label>Product Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-5363 Field to store the Product Group associated with the Plan</description>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubBusinessLineName__c</fullName>
        <formula>SubBusinessLine__r.Name</formula>
        <label>Sub Business Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubBusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-5363 Field to store the Sub business line associated with the plan</description>
        <label>Sub Business Line</label>
        <referenceTo>SubBusinessLine__c</referenceTo>
        <relationshipLabel>Sales Plans</relationshipLabel>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Non-Recurring</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Lo</fullName>
                    <isActive>false</isActive>
                    <label>Lo</label>
                </value>
                <value>
                    <fullName>NR</fullName>
                    <isActive>false</isActive>
                    <label>NR</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <isActive>false</isActive>
                    <label>R</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>InternalBusinessSegment__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>SubBusinessLine__c</columns>
        <columns>Type__c</columns>
        <columns>Region__c</columns>
        <columns>Amount__c</columns>
        <columns>Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Sales Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>